[gd_scene load_steps=4 format=2]

[ext_resource path="res://squid/basic_shot.gd" type="Script" id=1]
[ext_resource path="res://resources/basic_shot.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[node name="BasicShot" type="Area2D"]
monitoring = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="RayCast2DTop" type="RayCast2D" parent="."]
position = Vector2( 0, -2 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="RayCast2DBottom" type="RayCast2D" parent="."]
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2
